# pico

./: .env.example  .gitignore  CONTEXT.md  README.md  pyproject.toml
architecture/: maka-style-runtime-direction.md  pico-capability-boundary-eval-20260509-rerun.md  pico-capability-boundary-eval-20260509.md  pico-real-task-student-manager-eval.md  pico-runtime-event-control-plane.md  pico-student-manager-real-task-report-v2.md  pico-student-manager-real-task-report-v3.md  pico-student-manager-real-task-report.md  pico-subagent-design.md  pico-tui-from-bitz.md  pico-v4-architecture.md  pico-v4-optimization.md
benchmarks/: long_session_tasks.json  picobench-agentic-native-v0.yaml  picobench-agentic-native-v1.yaml  picobench-agentic-v1.yaml  picobench-core-v1.yaml  picobench-runtime-v1.json
docs/: configuration.md  memory.md
pico/: __init__.py  cli.py  config.py  evaluator.py  headless.py  headless_experiment.py  headless_grid.py  kernel_acceptance.py  kernel_gate.py  metrics.py  run_store.py  runtime_events.py  runtime_kernel.py  runtime_projections.py
scripts/: __init__.py  audit_picobench_goal.py  bench-pico-v3.sh  build_picobench_dogfood_task.py  check_picobench_tasks.py  merge_picobench_summaries.py  reclassify_picobench_failures.py  run_context_cost_experiment.py  run_headless_experiment_acceptance.py  run_kernel_acceptance.py  run_llm_handoff_benchmark.py  run_picobench.py  run_picobench_ablation.py  run_picobench_goal_live.py  run_picobench_retry_failures.py  run_picobench_runtime.py  scrape_harness_bench_site.py  select-swebench-ab-slice.py  (+4 more)
(+1057 files in other folders)
